...
    <string name="err_meeting_date_empty">Veuillez saisir la date de la réunion</string>
    <string name="err_meeting_list_empty">Tri ou filtre impossible. La liste est vide.</string>
    <string name="msg_delete_meeting">Voulez-vous supprimer la réunion ?</string>
    <string name="meeting_deleted">Réunion supprimée</string>
    <string name="btn_yes">Oui</string>
    <string name="btn_no">Non</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="meeting_room_selected">Sélection de salles de réunion</string>
    <string name="exit_app_back_pressed">Appuyez encore une fois pour quitter</string>
    <string name="select_room">Sélectionnez une salle de réunion</string>
    <string name="date_time">Date - Heure</string>
    <string name="participants">Participants</string>

    <string name="phone_land">phone_land</string>
    <string name="tablet">tablet</string>
    <string name="phone">phone</string>
    <string name="save">Enregistrer</string>
    <string name="fragment_list">LIST</string>
    <string name="fragment_right">RIGHT</string>


    <string name="s_color_room1">#F44336</string>
    <string name="s_color_room2">#F57555</string>
...
